# projekatAR

./: .gitignore  CMakeLists.txt  README.md  and.h  atom_set.h  base_formula.cpp  constant.cpp  constant.h  iff.h  imp.cpp  imp.h  main.cpp  not.cpp  not.h  or.h  unary_connective.h  valuation.h
GUI/tabloGUI/: mainwindow.ui  tabloGUI.pro
include/: CMakeLists.txt  atom.h  atomic_formula.h  base_formula.h  binary_connective.h  propositional_logic.h
src/: CMakeLists.txt  and.cpp  atom.cpp  atomic_formula.cpp  binary_connective.cpp  iff.cpp  or.cpp  sources.cpp  unary_connective.cpp  valuation.cpp
