include_directories(${CMAKE_CURRENT_LIST_DIR})

add_executable(2 ${CMAKE_CURRENT_LIST_DIR}/main.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/atom_set.h
                 ${CMAKE_CURRENT_LIST_DIR}/valuation.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/valuation.h
                 ${CMAKE_CURRENT_LIST_DIR}/base_formula.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/base_formula.h
                 ${CMAKE_CURRENT_LIST_DIR}/atomic_formula.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/atomic_formula.h
                 ${CMAKE_CURRENT_LIST_DIR}/constant.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/constant.h
                 ${CMAKE_CURRENT_LIST_DIR}/unary_connective.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/unary_connective.h
                 ${CMAKE_CURRENT_LIST_DIR}/not.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/not.h
                 ${CMAKE_CURRENT_LIST_DIR}/binary_connective.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/binary_connective.h
                 ${CMAKE_CURRENT_LIST_DIR}/and.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/and.h
                 ${CMAKE_CURRENT_LIST_DIR}/or.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/or.h
                 ${CMAKE_CURRENT_LIST_DIR}/iff.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/iff.h
                 ${CMAKE_CURRENT_LIST_DIR}/imp.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/imp.h
                 ${CMAKE_CURRENT_LIST_DIR}/atom.cpp
                 ${CMAKE_CURRENT_LIST_DIR}/atom.h
                 ${CMAKE_CURRENT_LIST_DIR}/propositional_logic.h)
